# fixed-smooth-conv

./: .gitignore  README.md  pyproject.toml
src/: layer.py
