[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Yuma Kinoshita"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
autopep8 = "^1.5.6"
Sphinx = "^3.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
